[package]
name = "percival-wasm"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
percival = { path = "../percival" }
wasm-bindgen = "0.2"
yansi = "0.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
